--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -24,7 +24,7 @@ form, label, legend, caption {
 
 
 html { 
-    background: url("../images/space.jpg") no-repeat center center fixed; 
+    background: url("../../images/space.jpg") no-repeat center center fixed; 
 /*background: rgb(209,0,92)  ;
 background: linear-gradient(90deg, rgba(209,0,92,1) 17%, rgba(61,9,121,1) 52%, rgba(0,168,255,1) 96%) no-repeat center center fixed;*/
 
