--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -20,7 +20,7 @@ section, summary, time, mark, audio, video {
 
     html { 
         background: rgb(13,191,252);
-        background: linear-gradient(180deg, rgba(13,191,252,1) 0%, rgba(238,187,55,1) 29%, rgba(253,45,45,1) 56%) no-repeat center center fixed;
+        background: linear-gradient(180deg, rgba(13,191,252,1) 0%, rgba(238,187,55,1) 17%, rgba(253,45,45,1) 38%)no-repeat center center fixed;
     -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
@@ -45,7 +45,7 @@ section, summary, time, mark, audio, video {
         color: white;
         position: relative;
         width: 100%;
-        top:13vh;
+        top:5vh;
         text-align: center;
         font-size: 8vw;
     }
@@ -61,7 +61,7 @@ section, summary, time, mark, audio, video {
         text-align: center;
         margin-top: 0;
         padding-top: 0;
-        top: 2vh;
+        top: 3vh;
         font-size: 4vw;
         height: 1vh;
         width: 100%;
@@ -92,7 +92,7 @@ section, summary, time, mark, audio, video {
         background-color: #fff;
         font-family: 'Roboto', sans-serif;
         position: relative;
-        top:25vh;
+        top:15vh;
         width:100%;
     }
     .divText{
@@ -108,6 +108,7 @@ section, summary, time, mark, audio, video {
         position: relative;
         margin-bottom: 4vh;
         padding-top: 5vh;
+        font-size: 4vh;
     
     }
     
@@ -128,7 +129,7 @@ section, summary, time, mark, audio, video {
     
     .footerDiv{
     position: relative;
-    text-align: center;
+    text-align: left;
     top: 0;
     bottom: 0;
     width: 100%;
@@ -136,7 +137,11 @@ section, summary, time, mark, audio, video {
     background-color: black;
     }
     footer{
-        padding-top: 2vh;
+        display: inline-block;
+        position: absolute;
+        top: 50%;
+        font-size: 12px;
+        padding-left: 10px;
         color:white;
     }
     
