--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -57,12 +57,11 @@ section, summary, time, mark, audio, video {
     }
     
     #navWrapperMobile{
-        position: absolute;
+        display: block;
+        position: relative;
         text-align: center;
-        margin-top: 0;
-        padding-top: 0;
-        top: 3vh;
-        font-size: 4vw;
+        font-size: 3vw;
+        top: 4vh;
         height: 1vh;
         width: 100%;
     }
@@ -94,6 +93,8 @@ section, summary, time, mark, audio, video {
         position: relative;
         top:15vh;
         width:100%;
+        height: 100%;
+        margin-bottom: 0;
     }
     .divText{
         margin-top: 7vh;
@@ -124,7 +125,7 @@ section, summary, time, mark, audio, video {
     #content2{
         width: 100px;
         height: 60px;
-        border: 2px dashed rgb(0, 0, 0,0.5)
+        border: 2px dashed rgb(0, 0, 0,0.5);
     }
     
     .footerDiv{
@@ -138,8 +139,9 @@ section, summary, time, mark, audio, video {
     }
     footer{
         display: inline-block;
-        position: absolute;
+        position: relative;
         top: 50%;
+        bottom: 0;
         font-size: 12px;
         padding-left: 10px;
         color:white;
@@ -149,14 +151,6 @@ section, summary, time, mark, audio, video {
     @media screen and (min-width: 600px) {
         html{background: rgb(13,191,252);
             background: linear-gradient(180deg, rgba(13,191,252,1) 0%, rgba(238,187,55,1) 29%, rgba(253,45,45,1) 56%) no-repeat center center fixed;  
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-        }
-            body {
-            background-color: transparent;
-            font-size: 16px;
         }
 
         #navWrapperMobile{
@@ -164,10 +158,10 @@ section, summary, time, mark, audio, video {
         }
 
         #navWrapperDesktop{
-            display: inline-block;
+            display: block;
             position: relative;
             text-align: center;
-            top: 6vh;
+            top: 15vh;
             margin-top: 3vh;
             font-size: 2vw;
             height: 1vh;
@@ -184,27 +178,23 @@ section, summary, time, mark, audio, video {
             display: inline-block;
             color: white;
             font-family: 'Roboto', sans-serif;
-            font-size: 25px;
+            font-size: 3vw;
             padding-left: 1.5vw;
             padding-right: 1vw;
         
         }
         
+        main{
+            top:40vh;
+            font-size: 1vw;
+        }
+
+        .contentH2 {
+            font-size: 5vw;
+        }
 
         .divText{
-            margin-top: 7vh;
-            margin-left: 5vw;
-            margin-right: 5vw;
-            margin-bottom:  15vh;
-        }
-        
-        .contentH2 {
-            font-family: 'Roboto', sans-serif;
-            position: relative;
-            margin-bottom: 4vh;
-            padding-top: 5vh;
-            font-size: 4vw;
-        
+            font-size: 2vw;
         }
     }
     
@@ -213,22 +203,15 @@ section, summary, time, mark, audio, video {
         html{
             background: rgb(13,191,252);
             background: linear-gradient(180deg, rgba(13,191,252,1) 0%, rgba(238,187,55,1) 29%, rgba(253,45,45,1) 56%) no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
         }
+
         body {
             background-color:transparent;
             font-size: 25px;
         }
+
         #pageTitle{
-            font-family: 'Lobster', sans-serif;
-            color: white;
-            position: relative;
-            width: 100%;
             top:13vh;
-            text-align: center;
             font-size: 5vw;
         }
         #poste{
@@ -237,9 +220,12 @@ section, summary, time, mark, audio, video {
         }
 
         #navWrapperDesktop {
+            display: block;
             height: 1px;
+            top: 15vh;
             padding: 0;
             margin:0;
+            font-size: 1vw;
         }
 
         #navWrapperMobile{
@@ -252,11 +238,16 @@ section, summary, time, mark, audio, video {
             display: inline-block;
             color: white;
             font-family: 'Roboto', sans-serif;
-            font-size: 25px;
+            font-size: 1.5vw;
             padding-left: 1vw;
             padding-right: .7vw;
         
         }
+
+        main{
+            top: 30vh;
+        }
+
         .divText{
             margin-top: 7vh;
             margin-left: 15vw;
