--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,37 @@ section, summary, time, mark, audio, video {
         -o-background-size: cover;
         background-size: cover;
         font-family: 'Lobster', cursive;
+        font-weight: 300;
       }
+
+      @keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+    }
+
+    /* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
     
     
     body{
@@ -48,12 +78,23 @@ section, summary, time, mark, audio, video {
         top:5vh;
         text-align: center;
         font-size: 8vw;
+
+        -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+        -moz-animation: fadein 2s; /* Firefox < 16 */
+         -ms-animation: fadein 2s; /* Internet Explorer */
+          -o-animation: fadein 2s; /* Opera < 12.1 */
+             animation: fadein 2s;
     }
     #poste{
         font-family: 'Roboto', sans-serif;
         position: relative;
         margin-top: 0; 
         font-size: 5vw;
+        -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+        -moz-animation: fadein 2s; /* Firefox < 16 */
+         -ms-animation: fadein 2s; /* Internet Explorer */
+          -o-animation: fadein 2s; /* Opera < 12.1 */
+             animation: fadein 2s;
     }
     
     #navWrapperMobile{
@@ -101,32 +142,41 @@ section, summary, time, mark, audio, video {
         margin-right: 1.5vw;
         margin-bottom:  15vh;
         font-size: 4.5vw;
+        -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+        -moz-animation: fadein 2s; /* Firefox < 16 */
+         -ms-animation: fadein 2s; /* Internet Explorer */
+          -o-animation: fadein 2s; /* Opera < 12.1 */
+             animation: fadein 2s;
     }
     
     .contentH2 {
         font-family: 'Roboto', sans-serif;
+        font-weight: 500;
         position: relative;
         margin-bottom: 4vh;
         padding-top: 5vh;
         font-size: 4vh;
-    
+    }
+    #content1{
+        font-weight: 300;
     }
     
     .gridDiv2{
         display: grid;
         margin-top: 10vh;
-        grid-template-columns: repeat(auto-fit,  minmax(186px, 1fr));
-        gap: 2vw;
+        grid-template-columns: repeat(auto-fill,  minmax(250px,1fr));
         justify-items: center;
         align-items: center;
     }
-
-    #content2{
-        width: 100px;
-        height: 60px;
-        border: 2px dashed rgb(0, 0, 0,0.5)
-    }
     
+    #content2{
+        background: white;
+        border: solid gray 1px;
+        text-align: center;
+        width: 250px;
+        padding:25% 0 ;
+
+    }
     .footerDiv{
     position: relative;
     text-align: left;
