--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,7 +21,7 @@ section, summary, time, mark, audio, video {
     html { 
         background: rgb(13,191,252);
         background: linear-gradient(180deg, rgba(13,191,252,1) 0%, rgba(238,187,55,1) 17%, rgba(253,45,45,1) 38%)no-repeat center center fixed;
-    -webkit-background-size: cover;
+        -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
@@ -29,36 +29,6 @@ section, summary, time, mark, audio, video {
         font-weight: 300;
       }
 
-      @keyframes fadein {
-        from { opacity: 0; }
-        to   { opacity: 1; }
-    }
-
-    /* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-    
-    
     body{
         background-color:transparent;
         position: absolute;
@@ -68,7 +38,48 @@ section, summary, time, mark, audio, video {
         width: 100%;
         font-size: 20vw;
     }
+
+
+    /* fade in on page load */
     
+    @keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+        }
+    
+        /* Firefox < 16 */
+    @-moz-keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+    }
+    
+    /* Safari, Chrome and Opera > 12.1 */
+    @-webkit-keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+    }
+    
+    /* Internet Explorer */
+    @-ms-keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+    }
+    
+    /* Opera < 12.1 */
+    @-o-keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+    }
+
+
+    #pageTitle, #poste, #emailWrapper, .divText {
+
+        -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+        -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+        -o-animation: fadein 2s; /* Opera < 12.1 */
+        animation: fadein 2s;
+    }
     
     #pageTitle{
         font-family: 'Lobster', sans-serif;
@@ -79,22 +90,12 @@ section, summary, time, mark, audio, video {
         text-align: center;
         font-size: 8vw;
 
-        -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-        -moz-animation: fadein 2s; /* Firefox < 16 */
-         -ms-animation: fadein 2s; /* Internet Explorer */
-          -o-animation: fadein 2s; /* Opera < 12.1 */
-             animation: fadein 2s;
     }
     #poste{
         font-family: 'Roboto', sans-serif;
         position: relative;
         margin-top: 0; 
         font-size: 5vw;
-        -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-        -moz-animation: fadein 2s; /* Firefox < 16 */
-         -ms-animation: fadein 2s; /* Internet Explorer */
-          -o-animation: fadein 2s; /* Opera < 12.1 */
-             animation: fadein 2s;
     }
     
     #navWrapperMobile{
@@ -112,10 +113,10 @@ section, summary, time, mark, audio, video {
         display: none;
     }
     
-    .accueilHeader{
+    #accueilHdrMobile{
         position: relative;
         height: 1px;
-        border-right:solid 1px #fff;/*add */
+        border-right:solid 1px #fff;
     }
     
     a:link, a:visited{
@@ -125,7 +126,6 @@ section, summary, time, mark, audio, video {
         font-size: 4vw;
         padding-left: 1.5vw;
         padding-right: 1vw;
-    
     }
 
     #emailWrapper{
@@ -153,11 +153,6 @@ section, summary, time, mark, audio, video {
         margin-right: 1.5vw;
         margin-bottom:  15vh;
         font-size: 4.5vw;
-        -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-        -moz-animation: fadein 2s; /* Firefox < 16 */
-         -ms-animation: fadein 2s; /* Internet Explorer */
-          -o-animation: fadein 2s; /* Opera < 12.1 */
-             animation: fadein 2s;
     }
     
     .contentH2 {
@@ -166,7 +161,7 @@ section, summary, time, mark, audio, video {
         position: relative;
         margin-bottom: 4vh;
         padding-top: 5vh;
-        font-size: 4vh;
+        font-size: 5vw;
     }
     #content1{
         font-weight: 300;
@@ -224,13 +219,8 @@ section, summary, time, mark, audio, video {
     @media screen and (min-width: 600px) {
         html{background: rgb(13,191,252);
             background: linear-gradient(180deg, rgba(13,191,252,1) 0%, rgba(238,187,55,1) 29%, rgba(253,45,45,1) 56%) no-repeat center center fixed;  
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
         }
             body {
-            background-color: transparent;
             font-size: 16px;
         }
 
@@ -249,75 +239,43 @@ section, summary, time, mark, audio, video {
             width: 100%;
         }
 
-        #accueilHeaderDT{
-            position: relative;
-            height: 1px;
-            border-right:solid 1px #fff;/*add */
+ 
+        a:link, a:visited{
+            font-size: 3vw;
         }
 
-        a:link, a:visited{
-            display: inline-block;
-            color: white;
-            font-family: 'Roboto', sans-serif;
-            font-size: 3vw;
-            padding-left: 1.5vw;
-            padding-right: 1vw;
-        
-        }
         #emailWrapper{
             font-size: 2vw;;
         }
         
 
         .divText{
-            margin-top: 7vh;
             margin-left: 5vw;
             margin-right: 5vw;
-            margin-bottom:  15vh;
             font-size: 2vw;
         }
-        
+
         .contentH2 {
-            font-family: 'Roboto', sans-serif;
-            position: relative;
-            margin-bottom: 4vh;
-            padding-top: 5vh;
             font-size: 4vw;
         }
     
-    }
-    
+    }  
 
     @media screen and (min-width: 1200px) {
-        html{
-            background: rgb(13,191,252);
-            background: linear-gradient(180deg, rgba(13,191,252,1) 0%, rgba(238,187,55,1) 29%, rgba(253,45,45,1) 56%) no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        }
         body {
-            background-color:transparent;
             font-size: 25px;
         }
         #pageTitle{
-            font-family: 'Lobster', sans-serif;
-            color: white;
-            position: relative;
-            width: 100%;
             top:13vh;
-            text-align: center;
             font-size: 5vw;
         }
+
         #poste{
-            font-family: 'Roboto', sans-serif;
             font-size: 3vw;
         }
 
         #navWrapperDesktop {
             display: flex;
-            width: 100%;
             justify-self: center;
             justify-content: center;
             padding: 0;
@@ -325,37 +283,26 @@ section, summary, time, mark, audio, video {
             font-size: 1vw;
             top: 15vh;
         }
-
-        #navWrapperMobile{
-            display: none;
-        }
-        
-
-        
+       
         a:link, a:visited{
-
-            display: inline-block;
-            color: white;
-            font-family: 'Roboto', sans-serif;
             font-size: 25px;
             padding-left: 1vw;
             padding-right: .7vw;
-        
         }
 
-/* ##############################################################*/
-/* ############## Begin drop down menu ###########################*/
-/* ##############################################################*/
+        /* ##############################################################*/
+        /* ############## Begin drop down menu ###########################*/
+        /* ##############################################################*/
 
-#accueilHeaderDT{border: none;}
+        #accueilHeaderDT{border: none;}
 
-#accueilHeaderDT2 p{
-    font-family: 'Roboto',sans-serif;
-    font-size: 25px;
-    padding-left: 1vw;
-    padding-right: 1vw;
-    border-left: solid 2px white ;
-}
+        #accueilHeaderDT2 p{
+        font-family: 'Roboto',sans-serif;
+        font-size: 25px;
+        padding-left: 1vw;
+        padding-right: 1vw;
+        border-left: solid 2px white ;
+         }
 
         .allProjectsContent{
             font-family: 'Roboto',sans-serif;
@@ -366,7 +313,7 @@ section, summary, time, mark, audio, video {
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 3;
-        }
+            }
           
           
           .allProjectsContent a {
@@ -392,10 +339,6 @@ section, summary, time, mark, audio, video {
 /* ############## End drop down menu ###########################*/
 /* ##############################################################*/
 
-
-
-
-
         #emailWrapper{
             top:35vh;
             font-size: 1.5vw;
@@ -405,21 +348,15 @@ section, summary, time, mark, audio, video {
             top: 30vh;
         }
         .divText{
-            margin-top: 7vh;
-            margin-left: 15vw;
-            margin-right: 15vw;
-            margin-bottom:  15vh;
+            margin-left: 17vw;
+            margin-right: 17vw;
             font-size: 1.5vw;
         }
         
         .contentH2 {
-            font-family: 'Roboto', sans-serif;
-            position: relative;
             margin-bottom: 4vh;
             padding-top: 10vh;
             font-size: 3vw;
-        
         }
-    }
 
-      
+    }
