--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,198 +1,214 @@
-html, body, div, span, applet, object,
-iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
-pre, a, abbr, acronym, address, big, cite,
-code, del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var, b,
-u, i, center, dl, dt, dd, ol, ul, li, fieldset,
-form, label, legend, table, caption, tbody,
-tfoot, thead, tr, th, td, article, aside,
-canvas, details, embed, figure, figcaption,
-footer, header, hgroup, menu, nav, output, ruby,
-section, summary, time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-    vertical-align: baseline;}
-    
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
 /* this should be the styling from 0-600px*/
 
-    html { 
-        background: rgb(13,191,252);
-        background: linear-gradient(180deg, rgba(13,191,252,1) 0%, rgba(238,187,55,1) 17%, rgba(253,45,45,1) 38%)no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        font-family: 'Lobster', cursive;
-        font-weight: 300;
-      }
+html {
+    background: rgb(13, 191, 252);
+    background: linear-gradient(180deg, rgba(13, 191, 252, 1) 0%, rgba(238, 187, 55, 1) 17%, rgba(253, 45, 45, 1) 38%)no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family: 'Lobster', cursive;
+    font-weight: 300;
+}
 
-    body{
-        background-color:transparent;
-        position: absolute;
-        padding-top: 0px;
-        margin: 0px;
-        top:0;
-        width: 100%;
-        font-size: 20vw;
+body {
+    background-color: transparent;
+    position: absolute;
+    padding-top: 0px;
+    margin: 0px;
+    top: 0;
+    width: 100%;
+    font-size: 20vw;
+}
+
+/* fade in on page load */
+
+@keyframes fadein {
+    from {
+        opacity: 0;
     }
-
-
-    /* fade in on page load */
-    
-    @keyframes fadein {
-        from { opacity: 0; }
-        to   { opacity: 1; }
-        }
-    
-        /* Firefox < 16 */
-    @-moz-keyframes fadein {
-        from { opacity: 0; }
-        to   { opacity: 1; }
+    to {
+        opacity: 1;
     }
-    
+}
+
+/* Firefox < 16 */
+
+@-moz-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+
+@-webkit-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/* Internet Explorer */
+
+@-ms-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/* Opera < 12.1 */
+
+@-o-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+#pageTitle, #poste, #emailWrapper, .divText {
+    -webkit-animation: fadein 2s;
     /* Safari, Chrome and Opera > 12.1 */
-    @-webkit-keyframes fadein {
-        from { opacity: 0; }
-        to   { opacity: 1; }
-    }
-    
+    -moz-animation: fadein 2s;
+    /* Firefox < 16 */
+    -ms-animation: fadein 2s;
     /* Internet Explorer */
-    @-ms-keyframes fadein {
-        from { opacity: 0; }
-        to   { opacity: 1; }
-    }
-    
+    -o-animation: fadein 2s;
     /* Opera < 12.1 */
-    @-o-keyframes fadein {
-        from { opacity: 0; }
-        to   { opacity: 1; }
-    }
+    animation: fadein 2s;
+}
 
+#pageTitle {
+    font-family: 'Lobster', sans-serif;
+    color: white;
+    position: relative;
+    width: 100%;
+    top: 5vh;
+    text-align: center;
+    font-size: 8vw;
+}
 
-    #pageTitle, #poste, #emailWrapper, .divText {
+#poste {
+    font-family: 'Roboto', sans-serif;
+    position: relative;
+    margin-top: 0;
+    font-size: 5vw;
+}
 
-        -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-        -moz-animation: fadein 2s; /* Firefox < 16 */
-        -ms-animation: fadein 2s; /* Internet Explorer */
-        -o-animation: fadein 2s; /* Opera < 12.1 */
-        animation: fadein 2s;
-    }
-    
-    #pageTitle{
-        font-family: 'Lobster', sans-serif;
-        color: white;
-        position: relative;
-        width: 100%;
-        top:5vh;
-        text-align: center;
-        font-size: 8vw;
+#navWrapperMobile {
+    position: fixed;
+    text-align: right;
+    z-index: 2;
+    top: 3vh;
+    font-size: 4vw;
+    height: .5vh;
+    width: 100%;
+}
 
-    }
-    #poste{
-        font-family: 'Roboto', sans-serif;
-        position: relative;
-        margin-top: 0; 
-        font-size: 5vw;
-    }
-    
-    #navWrapperMobile{
-        position: absolute;
-        text-align: center;
-        margin-top: 0;
-        padding-top: 0;
-        top: 3vh;
-        font-size: 4vw;
-        height: 1vh;
-        width: 100%;
-    }
+#navWrapperDesktop {
+    display: none;
+}
 
-    #navWrapperDesktop {
-        display: none;
-    }
-    
-    #accueilHdrMobile{
-        position: relative;
-        height: 1px;
-        border-right:solid 1px #fff;
-    }
-    
-    a:link, a:visited{
-        display: inline-block;
-        color: white;
-        font-family: 'Roboto', sans-serif;
-        font-size: 4vw;
-        padding-left: 1.5vw;
-        padding-right: 1vw;
-    }
+#accueilHdrMobile {
+    position: relative;
+    height: 1px;
+    border-right: solid 1px #fff;
+}
 
-    #emailWrapper{
-        font-family: 'Roboto',sans-serif;
-        position: relative;
-        color: white;
-        font-size: 3vw;
-        width: 100%;
-        right: 4%;
-        top: 20vh;
-        display:flex;
-        justify-content: flex-end;
-    }
-    
-    main{
-        background-color: #fff;
-        font-family: 'Roboto', sans-serif;
-        position: relative;
-        top:15vh;
-        width:100%;
-    }
-    .divText{
-        margin-top: 7vh;
-        margin-left: 1.5vw;
-        margin-right: 1.5vw;
-        margin-bottom:  15vh;
-        font-size: 4.5vw;
-    }
-    
-    .contentH2 {
-        font-family: 'Roboto', sans-serif;
-        font-weight: 500;
-        position: relative;
-        margin-bottom: 4vh;
-        padding-top: 5vh;
-        font-size: 5vw;
-    }
-    #content1{
-        font-weight: 300;
-    }
-    
-    .gridDiv2{
-        display: grid;
-        margin-top: 10vh;
-        grid-template-columns: repeat(auto-fill,  minmax(250px,1fr));
-        gap:1em;
-        justify-items: center;
-        align-items: center;
-    }
-    
-    #content2{
-        background: white;
-        text-align: center;
-        width: 170px;
-        padding:25% 0 ;
-    }
+a:link, a:visited {
+    display: inline-block;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 4vw;
+    padding-left: 1.5vw;
+    padding-right: 1vw;
+}
 
-    .borderGDiv{
-        max-width: 250px;
-  padding: 1rem;
-  position: relative;
-  background: linear-gradient(180deg, rgba(0,202,255,1) 0%, rgba(255,115,0,1) 100%);
-  padding: 3px;
-    }
+#emailWrapper {
+    font-family: 'Roboto', sans-serif;
+    position: relative;
+    color: white;
+    font-size: 3vw;
+    width: 100%;
+    right: 4%;
+    top: 20vh;
+    display: flex;
+    justify-content: flex-end;
+}
 
+main {
+    background-color: #fff;
+    font-family: 'Roboto', sans-serif;
+    position: relative;
+    top: 15vh;
+    width: 100%;
+}
 
-    .footerDiv{
+.divText {
+    margin-top: 7vh;
+    margin-left: 1.5vw;
+    margin-right: 1.5vw;
+    margin-bottom: 15vh;
+    font-size: 4.5vw;
+}
+
+.contentH2 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    position: relative;
+    margin-bottom: 4vh;
+    padding-top: 5vh;
+    font-size: 5vw;
+}
+
+#content1 {
+    font-weight: 300;
+}
+
+.gridDiv2 {
+    display: grid;
+    margin-top: 10vh;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 1em;
+    justify-items: center;
+    align-items: center;
+}
+
+#content2 {
+    background: white;
+    text-align: center;
+    width: 170px;
+    padding: 25% 0;
+}
+
+.borderGDiv {
+    max-width: 250px;
+    padding: 1rem;
+    position: relative;
+    background: linear-gradient(180deg, rgba(0, 202, 255, 1) 0%, rgba(255, 115, 0, 1) 100%);
+    padding: 3px;
+}
+
+.footerDiv {
     position: relative;
     text-align: center;
     display: flex;
@@ -202,161 +218,151 @@ section, summary, time, mark, audio, video {
     width: 100%;
     height: 7vh;
     background-color: black;
+}
+
+footer {
+    display: inline-block;
+    position: absolute;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    font-size: 12px;
+    color: white;
+}
+
+@media screen and (min-width: 600px) {
+    html {
+        background: rgb(13, 191, 252);
+        background: linear-gradient(180deg, rgba(13, 191, 252, 1) 0%, rgba(238, 187, 55, 1) 29%, rgba(253, 45, 45, 1) 56%) no-repeat center center fixed;
     }
-    footer{
-        display: inline-block;
-        position: absolute;
-        width: 90%;
-        display: flex;
-        justify-content: space-between;
-        align-self: center;
-        font-size: 12px;
-        color:white;
-
+    body {
+        font-size: 16px;
     }
-    
-
-    @media screen and (min-width: 600px) {
-        html{background: rgb(13,191,252);
-            background: linear-gradient(180deg, rgba(13,191,252,1) 0%, rgba(238,187,55,1) 29%, rgba(253,45,45,1) 56%) no-repeat center center fixed;  
-        }
-            body {
-            font-size: 16px;
-        }
-
-        #navWrapperMobile{
+    #navWrapperMobile {
         display: none;
-        }
+    }
 
-        #navWrapperDesktop{
-            display: inline-block;
-            position: relative;
-            text-align: center;
-            top: 15vh;
-            margin-top: 3vh;
-            font-size: 2vw;
-            height: 1vh;
-            width: 100%;
-        }
+    #pageTitle{
+        font-size: 4vw;
+    }    
+    #poste{
+        font-size: 3vw;
+    }
 
- 
-        a:link, a:visited{
-            font-size: 3vw;
-        }
+    #navWrapperDesktop {
+        display: flex;
+        justify-self: center;
+        justify-content: center;
+        position: relative;
+        top: 10vh;
+        margin-top: 3vh;
+        font-size: 2vw;
+        height: 1vh;
+        width: 100%;
+    }
+    a:link, a:visited {
+        font-size: 20px;
+    }
 
-        #emailWrapper{
-            font-size: 2vw;;
-        }
-        
-
-        .divText{
-            margin-left: 5vw;
-            margin-right: 5vw;
-            font-size: 2vw;
-        }
-
-        .contentH2 {
-            font-size: 4vw;
-        }
-    
-    }  
-
-    @media screen and (min-width: 1200px) {
-        body {
-            font-size: 25px;
-        }
-        #pageTitle{
-            top:13vh;
-            font-size: 5vw;
-        }
-
-        #poste{
-            font-size: 3vw;
-        }
-
-        #navWrapperDesktop {
-            display: flex;
-            justify-self: center;
-            justify-content: center;
-            padding: 0;
-            margin:0;
-            font-size: 1vw;
-            top: 15vh;
-        }
-       
-        a:link, a:visited{
-            font-size: 25px;
-            padding-left: 1vw;
-            padding-right: .7vw;
-        }
-
-        /* ##############################################################*/
-        /* ############## Begin drop down menu ###########################*/
-        /* ##############################################################*/
-
-        #accueilHeaderDT{border: none;}
-
-        #accueilHeaderDT2 p{
-        font-family: 'Roboto',sans-serif;
-        font-size: 25px;
+    /* ##############################################################*/
+    /* ############## Begin drop down menu ###########################*/
+    /* ##############################################################*/
+    #accueilHeaderDT { /* this is an inline element*/
+        border: none;
+    }
+    #accueilHeaderDT2 p { /* this is a block element div */
+        font-family: 'Roboto', sans-serif;
+        display: inline-block;
+        font-size: 20px;
         padding-left: 1vw;
         padding-right: 1vw;
-        border-left: solid 2px white ;
-         }
-
-        .allProjectsContent{
-            font-family: 'Roboto',sans-serif;
-            font-size: 15px;
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 3;
-            }
-          
-          
-          .allProjectsContent a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-          }
-
-          #accueilHeaderDT2:hover .allProjectsContent {
-            display: block;
-          }
-          
-          .allProjectsContent a:hover {background-color: rgb(151, 210, 228);}
-          
-          
-          #accueilHeaderDT2:hover p{
-            background-color:rgb(230, 98, 57);
-          }
-
-    
-/* ##############################################################*/
-/* ############## End drop down menu ###########################*/
-/* ##############################################################*/
-
-        #emailWrapper{
-            top:35vh;
-            font-size: 1.5vw;
-        }
-
-        main{
-            top: 30vh;
-        }
-        .divText{
-            margin-left: 17vw;
-            margin-right: 17vw;
-            font-size: 1.5vw;
-        }
-        
-        .contentH2 {
-            margin-bottom: 4vh;
-            padding-top: 10vh;
-            font-size: 3vw;
-        }
-
+        border-left: solid 2px white;
     }
+    .allProjectsContent {
+        font-family: 'Roboto', sans-serif;
+        font-size: 15px;
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 3;
+    }
+    .allProjectsContent a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    #accueilHeaderDT2:hover .allProjectsContent {
+        display: block;
+    }
+    .allProjectsContent a:hover {
+        background-color: rgb(151, 210, 228);
+    }
+    #accueilHeaderDT2:hover p {
+        background-color: rgb(230, 98, 57);
+    }
+    /* ##############################################################*/
+    /* ############## End drop down menu ###########################*/
+    /* ################################### */
+    #emailWrapper {
+        font-size: 2vw;
+        ;
+    }
+    .divText {
+        margin-left: 5vw;
+        margin-right: 5vw;
+        font-size: 2vw;
+    }
+    .contentH2 {
+        font-size: 4vw;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    body {
+        font-size: 25px;
+    }
+    #pageTitle {
+        top: 13vh;
+        font-size: 5vw;
+    }
+    #poste {
+        font-size: 3vw;
+    }
+    #navWrapperDesktop {
+        padding: 0;
+        margin: 0;
+        font-size: 1vw;
+        top: 15vh;
+    }
+    a:link, a:visited {
+        font-size: 25px;
+        padding-left: 1vw;
+        padding-right: .7vw;
+    }
+
+    #accueilHeaderDT2 p {
+        font-size: 25px;
+    }
+
+    #emailWrapper {
+        top: 35vh;
+        font-size: 1.5vw;
+    }
+    main {
+        top: 30vh;
+    }
+    .divText {
+        margin-left: 17vw;
+        margin-right: 17vw;
+        font-size: 1.5vw;
+    }
+    .contentH2 {
+        margin-bottom: 4vh;
+        padding-top: 10vh;
+        font-size: 3vw;
+    }
+}
