--- a/assets/css/hamburgers.css
+++ b/assets/css/hamburgers.css
@@ -6,6 +6,7 @@
  * @link https://github.com/jonsuh/hamburgers
  */
 .hamburger {
+  opacity: .3;
   padding: 15px 15px;
   display: inline-block;
   cursor: pointer;
